<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Swipe a selfie</string>
    <string name="game_activity">Game Activity</string>

    <string name="action_settings">Settings</string>
    <string name="playbutton">Play the game</string>
    <string name="time">0</string>
    <string name="score">Score: 0</string>
    <string name="highscore">Highest Score: 0</string>
    <string name="highscore_title">Highscore</string>
    <string name="fail">Wrong!</string>
    <string name="right">Correct!</string>
    <string name="gameover">Game Over!</string>
    <string name="youscored">You scored: </string>
    <string name="congratulations">Congratulations! You beat your highscore</string>
    <string name="congratulations2">Congratulations! You made the highscore</string>
    <string name="playagain">Do you want to play again?</string>
    <string name="typeName">Type in your name</string>
    <string name="play">Play</string>
    <string name="main">To Main Menu</string>
    <string name="submit">Submit</string>
    <string name="instructions">Instructions</string>
    <string name="BackToMain">Back To Main Menu</string>
    <string name="highscore0">"Highest Score: "</string>
    <string name="score0">"Score: "</string>
    <string name="saveName">Your name has been saved</string>
    <string name="time0">"Time: "</string>
    <string name="highscoreactivity">HighScore Activity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="reset">Reset Highscore</string>
    <string name="CameraButton">CameraButton</string>
    <string name="backButton">BackButton</string>
    <string name="chooseabonuscard">Choose a bonus card</string>
    <string name="camerabutton">CameraButton</string>
    <string name="highscorebutton">High Score</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructionsactivity">Instructions Activity</string>
    <string name="endGameDialog">Do you want to end the game?</string>
    <string name="endgame">End game</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="textarray0">Match the card from your deck with the reference card to gain points</string>
    <string name="textarray1">Swipe up to skip when the cards don\'t match</string>
    <string name="textarray2">Swipe down to keep matching cards</string>
    <string name="textarray3">Keeping non-matching cards costs points</string>
    <string name="textarray4">Double tap your chosen bonus card to get bonus points</string>
    <string name="textarray5">Double tap the \"Rush Hour\" card to start \"Rush Hour\"</string>
    <string name="textarray6">In \"Rush Hour\" mode, both skipping...</string>
    <string name="textarray7">...and keeping cards gives points</string>
    <string name="photoNotSaved">Photo was not saved</string>
    <string name="customphoto">Take own photo</string>
    <string name="defaultphoto">Use default photo</string>
</resources>
