<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="@drawable/bg2"
    tools:context="dtugroup.matchorskip.PhotoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseabonuscard"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:id="@+id/photoActivityTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <ImageView
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:id="@+id/backImg"
        android:contentDescription="@string/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

    <ImageView
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:id="@+id/cameraImg"
        android:contentDescription="@string/CameraButton"
        android:layout_marginStart="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/customphoto"
        android:textSize="15sp"
        android:gravity="center"
        android:layout_marginBottom="35dp"
        android:layout_alignBottom="@+id/cameraImg"
        android:layout_alignStart="@+id/cameraImg"
        android:background="#FFFFFF"
        android:textColor="#434343"
        android:layout_marginLeft="10dp"/>

    <ImageView
        android:layout_height="200dp"
        android:layout_width="140dp"
        android:id="@+id/defaultImg"
        android:contentDescription="@string/camerabutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/defaultphoto"
        android:textSize="15sp"
        android:gravity="center"
        android:background="#FFFFFF"
        android:textColor="#434343"
        android:layout_alignTop="@+id/textView1"
        android:layout_alignStart="@+id/defaultImg"
        android:layout_marginLeft="10dp"/>
</RelativeLayout>
