<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/playbutton"
        android:textAllCaps="false"
        android:id="@+id/playbutton"
        android:onClick="startGame"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/playbutton"
        android:layout_centerHorizontal="true"
        android:id="@+id/instructions"
        android:text="@string/instructions"
        android:textAllCaps="false"
        android:onClick="instructions"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/highscoreButton"
        android:layout_below="@+id/instructions"
        android:layout_centerHorizontal="true"
        android:text="High Score"
        android:textAllCaps="false"
        android:onClick="highscore"/>
</RelativeLayout>
