<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    >
    <TextView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/time"
        android:textSize="30sp"
        android:id="@+id/timeView"
        android:background="@drawable/clock"
        android:layout_alignTop="@+id/highscoreView"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textSize="30sp"
        android:id="@+id/scoreview"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="28sp"
        android:id="@+id/highscoreView"/>

    <ImageView
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:id="@+id/backImg"
        android:contentDescription="BackButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>

    <GridLayout
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:columnCount="3"
        android:rowCount="1"
        android:id="@+id/gridLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp">

        <ImageView
            android:layout_height="250dp"
            android:layout_width="180dp"
            android:id="@+id/matchphoto"
            android:layout_column="0" />

        <ImageView
            android:layout_height="250dp"
            android:layout_width="180dp"
            android:id="@+id/currentphoto"
            android:layout_column="2" />

    </GridLayout>
</RelativeLayout>