<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HighScoreActivity" >
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/bg2"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/highscore_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="30sp"
        android:id="@+id/highscoreTitle" />

    <GridLayout
        android:layout_width="300sp"
        android:layout_height="205sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65sp"
        android:rowCount="10"
        android:id="@+id/gridLayout"
        android:columnCount="2"
        android:background="#FFFFFF">
        <TextView
            android:layout_marginTop="5sp"
            android:id="@+id/point1"
            android:layout_row="0"
            android:layout_column="1"
            android:textSize="26sp"
            android:maxLength="3"
            android:layout_width="60sp"
            android:layout_marginStart="20sp"
            android:textColor="#434343"
            android:gravity="right" />
        <TextView
            android:layout_marginTop="5sp"
            android:id="@+id/name1"
            android:layout_row="0"
            android:layout_column="0"
            android:textSize="26sp"
            android:maxLength="10"
            android:layout_width="180sp"
            android:layout_marginStart="20sp"
            android:textColor="#434343"/>
        <TextView
            android:id="@+id/point2"
            android:layout_row="1"
            android:layout_column="1"
            android:textSize="26sp"
            android:maxLength="3"
            android:layout_width="60sp"
            android:layout_marginStart="20sp"
            android:textColor="#434343"
            android:gravity="right"/>
        <TextView
            android:id="@+id/name2"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="26sp"
            android:maxLength="10"
            android:layout_width="180sp"
            android:layout_marginStart="20sp"
            android:textColor="#434343"/>
        <TextView
            android:id="@+id/point3"
            android:layout_row="2"
            android:layout_column="1"
            android:textSize="26sp"
            android:layout_width="60sp"
            android:maxLength="3"
            android:layout_marginStart="20sp"
            android:textColor="#434343"
            android:gravity="right"/>
        <TextView
            android:id="@+id/name3"
            android:layout_row="2"
            android:layout_column="0"
            android:textSize="26sp"
            android:maxLength="10"
            android:layout_width="180sp"
            android:layout_marginStart="20sp"
            android:textColor="#434343"/>
        <TextView
            android:id="@+id/point4"
            android:layout_row="3"
            android:layout_column="1"
            android:textSize="26sp"
            android:layout_width="60sp"
            android:maxLength="3"
            android:layout_marginStart="20sp"
            android:textColor="#434343"
            android:gravity="right"/>
        <TextView
            android:id="@+id/name4"
            android:layout_row="3"
            android:layout_column="0"
            android:textSize="26sp"
            android:maxLength="10"
            android:layout_width="180sp"
            android:layout_marginStart="20sp"
            android:textColor="#434343"/>
        <TextView
            android:id="@+id/point5"
            android:layout_row="4"
            android:layout_column="1"
            android:textSize="26sp"
            android:maxLength="3"
            android:layout_width="60sp"
            android:layout_marginStart="20sp"
            android:textColor="#434343"
            android:gravity="right"/>
        <TextView
            android:id="@+id/name5"
            android:layout_row="4"
            android:layout_column="0"
            android:textSize="26sp"
            android:maxLength="10"
            android:layout_width="180sp"
            android:layout_marginStart="20sp"
            android:textColor="#434343"/>
    </GridLayout>

    <Button
        android:layout_width="170sp"
        android:layout_height="wrap_content"
        android:background="#F53838"
        android:textColor="#FFFFFF"
        android:text="@string/reset"
        android:id="@+id/reset"
        android:textAllCaps="false"
        android:onClick="reset"
        android:layout_alignBottom="@+id/backImg"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_height="30dp"
        android:layout_width="30dp"
        android:id="@+id/backImg"
        android:contentDescription="@string/backButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"/>
</RelativeLayout>